# freely-walking-optomotor

./: .gitignore  CLAUDE.md  README.md  README2.rtf  batch_track_ufmf.m  dashboard.sh  extra_code.m  manuscript_checklist.md  plot_ang_velocity_heading.asv  plot_ang_velocity_heading.m  process_freely_walking_optomotor.asv  process_freely_walking_optomotor.m  run_core_functions.m  session_notes.md  setup_path.m  track_videos.m
.claude/: launch.json  settings.local.json
analysis_scripts/: analyse_p33_p34.m  analyse_p35_shiftedCoR.m  analyse_phototaxis_polar.m  analyse_viewing_distance.m  compare_diff_interval_stimuli.m  convex_hull_analysis.m  generate_trajectory_plots.m  p30_different_contrasts_analysis.m  p31_different_speeds_analysis.m  phototaxis_test_code.m  plot_compare_conditions_per_group.m  single_lady_analysis.m  stats_within_group.m
analysis_tests/: analyse_p35_shiftedCoR.m  phototaxis_test_code.m  positional_effects_on_behaviour.m
config/: config.py  get_config.m
daily_processing/: copy_movies_to_network.py  daily_processing.py  reprocessing_script.py  run_daily_processing.bat
dashboard/: app.py  callbacks.py  constants.py  data_loader.py  preprocess.py  processing.py
data_review/: get_video_observations.m  review_behavioural_data.m
docs_generator/: config.py  (+2 more)
python/optomotor_data/: __init__.py  pyproject.toml
python/optomotor_data/analysis/: __init__.py  slicing.py
python/optomotor_data/config/: __init__.py  protocol_config.py
python/optomotor_data/core/: __init__.py  experiment.py
python/optomotor_data/io/: __init__.py  mat_loader.py
(+879 files in other folders)
